# fadua

./: .gitignore  README.md
docs/: despliegue.md  explicacion-tecnica.md
docs/superpowers/specs/: 2026-07-04-fadua-woo-sheets-sync-design.md
n8n/: README-import.md  docker-compose.yml  workflow.json
prefect/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
prefect/sync/: diff.py  notifier.py  prefect_flow.py
python/: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
python/sync/: __main__.py  config.py  diff.py  notifier.py  prefect_flow.py  sheets.py  woocommerce.py
python/tests/: test_diff.py  test_notifier.py
segundo/: .env.production.example  .gitignore  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml  specs.md
segundo/backend/: .env.example  Dockerfile  README.md  env.example  pyproject.toml
segundo/backend/app/: config.py  main.py
segundo/backend/app/agent/: confidence.py  engine.py  llm_agent.py  llm_hook.py  models.py  sql_builder.py  templates.py  think_strip.py
segundo/backend/app/api/: chat.py
segundo/backend/app/database/: engine.py
segundo/backend/app/memory/: base.py  redis_store.py
segundo/backend/app/planner/: planner.py
segundo/backend/app/schemas/: chat.py
segundo/backend/app/security/: sql_guard.py
segundo/backend/app/semantics/: dictionary.py
segundo/backend/app/tools/: __init__.py  calculate_kpis.py  create_chart.py  execute_sql.py  forecast.py  summarize.py
segundo/backend/tests/: test_calculate_kpis.py  test_comparison_kpi.py  test_llm_agent.py  test_model_resolution.py  test_sql_builder.py  test_sql_guard.py  test_templates.py  test_think_stripper.py
segundo/db/: generate_seed.py  init.sql
segundo/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
segundo/frontend/src/: App.tsx  index.css
tercero/: .gitignore  CLAUDE.md  Dockerfile  README.md  env.example  pyproject.toml  specs.md
tercero/app/: config.py  errors.py  filler.py  forms_schema.py  llm.py  main.py  mapper.py  normalize.py  results.py  runner.py  sheets.py  validator.py
tercero/fixtures/: form_mora_fb.json  form_ventas_fb.json  tab_MORA.csv  tab_VENTAS.csv
tercero/tests/: test_filler.py  test_forms_schema.py  test_llm_privacy.py  test_main.py  test_mapper.py  test_normalize.py  test_results.py  test_runner.py  test_sheets.py  test_submit_replica.py
tercero/tests/replica/: confirmation.html  index.html
(+18 files in other folders)
