[project]
name = "fadua-form-filler"
version = "0.1.0"
description = "Autonomous agent that reads records from Google Sheets and fills Google Forms step by step."
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.45",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "browser: tests that launch a real Playwright browser (slower; for filtering, not exclusion)",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
